--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,10 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
+    <div id="root">
+      <h2>This game runs best on Chrome desktop</h2>
+      <p>Remember to switch the sound on!</p>
+    </div>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
