--- a/public/index.html
+++ b/public/index.html
@@ -29,6 +29,8 @@
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root">
+      <img src="%PUBLIC_URL%/loading.gif" width="100px"/> 
+      <h1> Loading... </h1>
       <h2>This game runs best on Chrome desktop</h2>
       <p>Remember to switch the sound on!</p>
     </div>
